Kelsey Development Sandbox/src/objects/DS_Functioning_Forms_F__c.object
<CustomObject>
    <fields>
        <fullName>Background_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Background ID</label>
        <referenceTo>DS_Background_Family_Info_F__c</referenceTo>
        <relationshipLabel>DS Functioning Forms F</relationshipLabel>
        <relationshipName>DS_Functioning_Forms_F</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <formula>Client__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Client ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <referenceTo>Client__c</referenceTo>
        <relationshipLabel>DS Functioning Forms F</relationshipLabel>
        <relationshipName>DS_Functioning_Forms_F</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>FAGGRESS__c</fullName>
        <description>8. Aggression</description>
        <label>FAGGRESS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FASSESS__c</fullName>
        <description>2. Identify all of the services your project provided to the consumer since his/her last NOMs interview; this includes CMHS-funded and non-funded services. = Assessment</description>
        <label>FASSESS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FATTACH__c</fullName>
        <description>10. Child Attachment Difficulties</description>
        <label>FATTACH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FATYPBEH__c</fullName>
        <description>12. Atypical Behaviors</description>
        <label>FATYPBEH</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FBSLCTREATMENT__c</fullName>
        <description>1. Is this child receiving a treatment from a therapist participating in the breakthrough series or learning collaborative for that treatment?</description>
        <label>FBSLCTREATMENT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCASEMGMT__c</fullName>
        <description>7. Identify all of the services your project provided to the consumer since his/her last NOMs interview; this includes CMHS-funded and non-funded services. = Case management</description>
        <label>FCASEMGMT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBISASSM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Assessment</description>
        <label>FCBISASSM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISCFTS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = CFTSI</description>
        <label>FCBISCFTS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISCODT__c</fullName>
        <description>4. BIS date completed treatment</description>
        <label>FCBISCODT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCBISCOMP__c</fullName>
        <description>4. BIS treatment completed</description>
        <label>FCBISCOMP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBISCONS__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Consultation</description>
        <label>FCBISCONS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISCREE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Screening</description>
        <label>FCBISCREE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISCRIM__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Crisis Management</description>
        <label>FCBISCRIM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISFAMT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Family Therapy</description>
        <label>FCBISFAMT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISGRPT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Group Therapy</description>
        <label>FCBISGRPT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISINDT__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Individual Therapy</description>
        <label>FCBISINDT</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISLFDT__c</fullName>
        <description>4. BIS date left treatment</description>
        <label>FCBISLFDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCBISMANA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Management</description>
        <label>FCBISMANA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISOTHE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Other</description>
        <label>FCBISOTHE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISOTHS__c</fullName>
        <description>2. Treatment component = Other Specify</description>
        <label>FCBISOTHS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCBISPFA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Psychological First Aid</description>
        <label>FCBISPFA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISPSYE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Psycho-education</description>
        <label>FCBISPSYE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISRECV__c</fullName>
        <description>1. Is this child/family receiving brief intervention services?</description>
        <label>FCBISRECV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCBISRFSE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Referral Services</description>
        <label>FCBISRFSE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISSFTP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Safety Plan</description>
        <label>FCBISSFTP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISSPR__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Skills for Psychological Recovery</description>
        <label>FCBISSPR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISSUPG__c</fullName>
        <defaultValue>false</defaultValue>
        <description>2. Treatment component = Support Therapy</description>
        <label>FCBISSUPG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FCBISTCDT__c</fullName>
        <description>3. BIS treatment start date</description>
        <label>FCBISTCDT</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCCONTACT__c</fullName>
        <description>1. Have you or other grant staff had contact with the consumer within 90 days of last encounter?</description>
        <label>FCCONTACT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEADHD__c</fullName>
        <description>1. Attention deficit hyperactivity disorder</description>
        <label>FCEADHD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEADJ__c</fullName>
        <description>14. Adjustment disorder</description>
        <label>FCEADJ</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEASD__c</fullName>
        <description>12. Acute stress disorder</description>
        <label>FCEASD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEATTPR__c</fullName>
        <description>15. Attachment problems/difficulties</description>
        <label>FCEATTPR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEBIPL__c</fullName>
        <description>2. Bipolar disorder</description>
        <label>FCEBIPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCECD__c</fullName>
        <description>23. Conduct disorder</description>
        <label>FCECD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEDEP__c</fullName>
        <description>4. Depressive disorder</description>
        <label>FCEDEP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEDISSO__c</fullName>
        <description>17. Dissociative disorder</description>
        <label>FCEDISSO</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEDISYMP__c</fullName>
        <description>16. Dissociative symptoms</description>
        <label>FCEDISYMP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEDPS__c</fullName>
        <description>3. Depressive symptoms</description>
        <label>FCEDPS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEEAT__c</fullName>
        <description>19. Feeding and eating disorder</description>
        <label>FCEEAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEEXPL__c</fullName>
        <description>24. Intermittent explosive disorder</description>
        <label>FCEEXPL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEGA__c</fullName>
        <description>6. Generalized anxiety disorder</description>
        <label>FCEGA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEGBP__c</fullName>
        <description>25. General behavioral problems</description>
        <label>FCEGBP</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEOCD__c</fullName>
        <description>11. Obsessive compulsive and related disorders</description>
        <label>FCEOCD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEODD__c</fullName>
        <description>22. Oppositional defiant disorder</description>
        <label>FCEODD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEOTHER__c</fullName>
        <description>30. Are there any other additional problems/symptoms/disorders displayed by this child? Specified</description>
        <label>FCEOTHER</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCEOTHY__c</fullName>
        <description>30. Child has other problems/symptoms</description>
        <label>FCEOTHY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEPANDS__c</fullName>
        <description>9. Panic disorder</description>
        <label>FCEPANDS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEPHODS__c</fullName>
        <description>10. Phobic disorder</description>
        <label>FCEPHODS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEPRIMSP__c</fullName>
        <description>31. Primary problem, specified</description>
        <label>FCEPRIMSP</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FCEPRIM__c</fullName>
        <description>31. Please indicate the primary problem/symptom/disorder displayed by this child.</description>
        <label>FCEPRIM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEPSY__c</fullName>
        <description>Psychotic Disorder</description>
        <label>FCEPSY</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCEPTSD__c</fullName>
        <description>13. Post traumatic stress disorder</description>
        <label>FCEPTSD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCESA__c</fullName>
        <description>26. Substance abuse problems</description>
        <label>FCESA</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCESBD__c</fullName>
        <description>29. Suicidal behavior disorder</description>
        <label>FCESBD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCESEPDS__c</fullName>
        <description>7. Separation anxiety disorder</description>
        <label>FCESEPDS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCESEXPR__c</fullName>
        <description>21. Sexual behavioral problems</description>
        <label>FCESEXPR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCESLPDS__c</fullName>
        <description>20. Sleep-wake disorders</description>
        <label>FCESLPDS</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCESOCAD__c</fullName>
        <description>8. Social anxiety disorder</description>
        <label>FCESOCAD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCESOMAT__c</fullName>
        <description>18. Somatization</description>
        <label>FCESOMAT</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCESUBST__c</fullName>
        <description>27. Substance-related and addictive disorders</description>
        <label>FCESUBST</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCESUICD__c</fullName>
        <description>28. Suicidality</description>
        <label>FCESUICD</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCETG__c</fullName>
        <description>5. Traumatic/complicated grief</description>
        <label>FCETG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCHCARE__c</fullName>
        <description>4. Support Services = Child care</description>
        <label>FCHCARE</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCOCCUR__c</fullName>
        <description>6. Identify all of the services your project provided to the consumer since his/her last NOMs interview; this includes CMHS-funded and non-funded services. = Co-Occurring services</description>
        <label>FCOCCUR</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FCOPSERV__c</fullName>
        <description>9. Support Services = Consumer operated services</description>
        <label>FCOPSERV</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>95</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>